--- a/lxhshadowrocket.conf
+++ b/lxhshadowrocket.conf
@@ -97,6 +97,9 @@ FINAL,PROXY
 Bilibili获取Cookie = type=http-request,pattern=^https:\/\/(www|live)\.bilibili\.com\/?.?,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js,enable=true
 Bilibili签到 = type=cron,cronexpr="10 0 0 * * *",script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js, enable=true
 
+京东汽车兑换 = type=cron,cronexpr="0 0 * * *",script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_car_exchange.js, enable=true
+
+
 
 [MITM]
 ca-passphrase = Shadowrocket
