--- a/lxhshadowrocket.conf
+++ b/lxhshadowrocket.conf
@@ -291,6 +291,7 @@ DOMAIN-SUFFIX,jianshuapi.com,DIRECT
 DOMAIN-SUFFIX,soundcloud.com,PROXY
 DOMAIN-SUFFIX,sndcdn.com,PROXY
 DOMAIN-SUFFIX,outlook.com,DIRECT
+#lxh加的薅羊毛
 DOMAIN-SUFFIX,azureedge.net,PROXY
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
