--- a/lxhshadowrocket.conf
+++ b/lxhshadowrocket.conf
@@ -306,7 +306,7 @@ IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 GEOIP,CN,DIRECT
-FINAL,PROXY,script-filter
+FINAL,DIRECT,script-filter
 
 [Host]
 localhost = 127.0.0.1
