--- a/lxhshadowrocket.conf
+++ b/lxhshadowrocket.conf
@@ -318,115 +318,34 @@ localhost = 127.0.0.1
 ^http://reject.example.com reject 
 
 [Script]
-# IOS Loon Task&Cookies配置 By LXK9301
-# GitHub主页(https://gitee.com/lxk0301/jd_scripts/tree/master)
-# TG讨论组 (https://t.me/JD_fruit_pet)
-# TG通知频道 (https://t.me/jdfruit)
-# Loon的Task&Cookies脚本订阅链接: https://jdsharedresourcescdn.azureedge.net/jdresource/Loon/lxk0301_LoonTask.conf
-# 使用方法:打开APP，顶部的配置 -> 脚本 -> 订阅脚本- > 点击右上角+号 -> 添加url链接 (https://jdsharedresourcescdn.azureedge.net/jdresource/Loon/lxk0301_LoonTask.conf)
+#京东签到
+获取京东Cookie = type=http-request,pattern=https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
+京东多合一签到 = type=cron,cronexpr="5 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
 
-hostname = api.m.jd.com, wq.jd.com, draw.jdfcloud.com, jdjoy.jd.com, account.huami.com
-
-# 获取多账号京东Cookie
-http-request https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js, tag=获取多账号京东Cookie
-# 京豆变动通知
-cron "2 9 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_change.js, tag=京豆变动通知
-# 领京豆额外奖励
-cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_home.js, tag=领京豆额外奖励
-# 美丽研究院
-# 东东超市兑换奖品
-cron "0 0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_blueCoin.js,tag=东东超市兑换奖品
-# 口袋书店
-cron "1 8,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bookshop.js,tag=口袋书店
-# 京东汽车
-cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_car.js, tag=京东汽车
-# 京东汽车兑换
-cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_car_exchange.js, tag=京东汽车兑换
-# 签到领现金
-cron "2 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cash.js,tag=签到领现金
-# 摇京豆
-cron "5 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_club_lottery.js,tag=摇京豆
-# crazyJoy任务
-cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy.js,tag=crazyJoy任务
-# 监控crazyJoy分红
-cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js,tag=监控crazyJoy分红
-# 天天提鹅
-cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_egg.js,tag=天天提鹅
-# 京喜工厂
-cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_dreamFactory.js,tag=京喜工厂
-# 东东农场
-cron "5 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_fruit.js,tag=东东农场
-# 获取互助码
-cron "20 13 * * 6" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_get_share_code.js, tag=获取互助码
-# 东东工厂
-cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdfactory.js,tag=东东工厂
-# 京东赚赚
-cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdzz.js,tag=京东赚赚
-# 宠汪汪
-cron "15 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy.js,tag=京东宠汪汪
-# 宠汪汪🐕喂食
-cron "15 0-23/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_feedPets.js,tag=京东宠汪汪喂食
-# 宠汪汪强制为别人助力
-http-request ^https:\/\/draw\.jdfcloud\.com\/\/common\/pet\/enterRoom\/h5\?invitePin=.*(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?&reqSource=weapp|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_help.js, requires-body=true, timeout=3600, tag=宠汪汪强制为别人助力
-# 宠汪汪积分兑换奖品
-cron "0 0-16/8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_reward.js,tag=宠汪汪积分兑换奖品
-# 宠汪汪赛跑
-cron "15 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js, tag=宠汪汪邀请助力与赛跑助力
-# 宠汪汪助力更新Token
-http-response ^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code= script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js, requires-body=true, timeout=10, tag=宠汪汪助力更新Token
-# 宠汪汪助力获取Token
-http-request ^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId= script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js, timeout=3600, tag=宠汪汪助力获取Token
-# 宠汪汪偷好友积分与狗粮
-cron "10 0-21/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_steal.js,tag=宠汪汪偷好友积分与狗粮
-# 京喜农场
-cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js,tag=京喜农场
-# 京东快递签到
-cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_kd.js, tag=京东快递签到
-# 京东摇钱树
-cron "3 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_moneyTree.js,tag=京东摇钱树
-# 京东秒秒币
-cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_ms.js,tag=京东秒秒币
-# 点点券
-cron "10 0,20 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_necklace.js,tag=点点券
-# 女装盲盒抽京豆
-cron "0 7 19-25 2 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_nzmh.js,tag=女装盲盒
-# 东东萌宠
-cron "15 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pet.js,tag=东东萌宠
-# 金融养猪
-cron "12 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pigPet.js, tag=京东金融养猪猪
-# 京东种豆得豆
-cron "1 7-21/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_plantBean.js,tag=京东种豆得豆
-# 京东保价
-cron "0 2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_price.js,tag=京东保价
-# 京东全民开红包
-cron "1 1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_redPacket.js, tag=京东全民开红包
-# 闪购盲盒
-cron "20 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_sgmh.js, tag=闪购盲盒
-# 进店领豆
-cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_shop.js,tag=进店领豆
-# 东东小窝
-cron "16 22 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_small_home.js, tag=东东小窝
-# ✈️天天加速
-cron "8 0-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed.js,tag=京东天天加速
-# 京东极速版红包
-cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js,tag=京东极速版红包
-# 京东极速版
-cron "0 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_sign.js,tag=京东极速版
-# 东东超市
-cron "11 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js,tag=东东超市
-# 赚京豆
-cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_syj.js, tag=赚京豆
-# 取关京东店铺和商品
-cron "55 23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js,tag=取关京东店铺商品
-# 小鸽有礼2
-cron "30 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xgyl.js, tag=小鸽有礼2
-# 京喜签到
-cron "5 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jx_sign.js,tag=京喜签到
-# 小米运动
-cron "15 17 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/xmSports.js, tag=小米运动
-# 小米运动获取Token
-http-response ^https:\/\/account\.huami\.com\/v2\/client\/login script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/xmSports.js, requires-body=true, timeout=3600, tag=小米运动获取Token
-
+# 京东游戏
+京东农场 = type=cron,cronexpr="5 6-18/6 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_fruit.js,enable=true
+京东萌宠 = type=cron,cronexpr="5 6-18/6 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_pet.js, enable=true
+京东宠汪汪 = type=cron,cronexpr="15 */2 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_joy.js, enable=true
+宠汪汪喂食 = type=cron,cronexpr="0 0 */2 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_joy_feedPets.js, enable=true
+宠汪汪积分兑换奖品 = type=cron,cronexpr="0 0-16/8 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_joy_reward.js, enable=true
+宠汪汪偷好友积分与狗粮 = type=cron,cronexpr="0 0,6 * * *" ,timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_joy_steal.js, enable=true
+京东种豆得豆 = type=cron,cronexpr="1 7-21/2 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_plantBean.js, enable=true
+京东天天加速 = type=cron,cronexpr="8 */3 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_speed.js, enable=true
+京东摇钱树 = type=cron,cronexpr="3 */2 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_moneyTree.js, enable=true
+取关京东店铺商品 = type=cron,cronexpr="55 23 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_unsubscribe.js, enable=true
+进店领豆 = type=cron,cronexpr="10 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_shop.js, enable=true
+京小超 = type=cron,cronexpr="11 1-23/5 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_superMarket.js, enable=true
+京小超领蓝币 = type=cron,cronexpr="11 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_blueCoin.js, enable=true
+京东白条 = type=cron,cronexpr="0 9 * * *",timeout=10,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, enable=true
+京东全民开红包 = type=cron,cronexpr="9 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_redPacket.js, enable=true
+京东摇京豆 = type=cron,cronexpr="5 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_club_lottery.js, enable=true
+京东抽奖机 = type=cron,cronexpr=11 0 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js
+京东排行榜 = type=cron,cronexpr=11 9 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js
+#在京东金融app内搜索摇钱树即可进入小游戏页面，然会选择提鹅小游戏,先参加一下这个活动，这是前提
+#在浏览直接访问https://jdde.jd.com/btyingxiao/marketing/html/index.html? 登录京东账户即可获取cookie
+京东金融提鹅 = type=cron,cronexpr=10 10 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_daily_egg.js
+京东金融养猪 = type=cron,cronexpr=12 * * * *,timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_pigPet.js
+京东特权值 = type=cron,cronexpr=5 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js
 
 [MITM]
 ca-passphrase = Shadowrocket
