--- a/lxhshadowrocket.conf
+++ b/lxhshadowrocket.conf
@@ -296,6 +296,7 @@ DOMAIN-SUFFIX,jianshuapi.com,DIRECT
 DOMAIN-SUFFIX,soundcloud.com,PROXY
 DOMAIN-SUFFIX,sndcdn.com,PROXY
 DOMAIN-SUFFIX,outlook.com,DIRECT
+DOMAIN-SUFFIX,azureedge.net,PROXY
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
